Fix comment wrapping

--- a/res/css/_comment.css
+++ b/res/css/_comment.css
@@ -14,6 +14,7 @@
 
 .comment-comment {
   margin-right: 0.5rem;
+  word-wrap: break-word;
 }
 
 .comment-timestamp {
